# uwsgiconf

./: .coveragerc  .landscape.yml  .readthedocs.yaml  .travis.yml  AUTHORS  AUTHORS.md  CHANGELOG  CHANGELOG.md  INSTALL  INSTALL.md  LICENSE  MANIFEST.in  README.md  README.rst  mkdocs.yml  pyproject.toml  ruff.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: python-package.yml
demos/: jsonlog.py  onefile.py
docs/: 010_quickstart.md  020_cli.md  022_config.md  030_uwsgi_stub.md  040_hints.md  050_formatters.md  060_advanced.md  Makefile  index.md
docs/015_presets/: 010_nice.md  020_empire.md  index.md
docs/016_contrib/: django.md
docs/contrib/: django.md  index.md
docs/presets/: empire.md
docs/source/: cli.rst  conf.py  config.rst  fomatters.rst  formatters.rst  grp_alarm_types.rst  grp_alarms.rst  grp_applications.rst  grp_caching.rst  grp_empire.rst  grp_locks.rst  grp_logging.rst  grp_logging_encoders.rst  grp_logging_loggers.rst  grp_main_process.rst  grp_main_process_actions.rst  grp_master_process.rst  grp_monitoring.rst  grp_monitoring_collectors.rst  grp_monitoring_metric_types.rst  grp_monitoring_pushers.rst  grp_networking.rst  grp_networking_sockets.rst  grp_plugin_python.rst  grp_python.rst  grp_queue.rst  grp_routing.rst  grp_routing_actions.rst  grp_routing_modifiers.rst  grp_routing_routers.rst  grp_routing_subjects.rst  grp_routing_vars.rst  grp_spooler.rst  grp_statics.rst  grp_subscriptions.rst  grp_subscriptions_algos.rst  grp_workers.rst  grp_workers_cheapening.rst  hints.rst  index.rst  (+24 more)
src/uwsgiconf/: __init__.py  base.py  (+9 more)
tests/: __init__.py  conftest.py  test_config.py  test_module.py  test_utils.py
tools/: localize.py  makemigrations.py
uwsgiconf/: __init__.py  base.py  cli.py  config.py  exceptions.py  formatters.py  settings.py  sysinit.py  typehints.py  utils.py  uwsgi.py  uwsgi_stub.py  variables.py
(+292 files in other folders)
