[project]
name = "uwsgiconf"
dynamic = ["version"]
description = "Configure uWSGI from your Python code."
authors = [
    { name = "Igor Starikov", email = "idlesign@yandex.ru" }
]
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
requires-python = ">=3.10"
keywords = ["uWSGI", "configuration"]
dependencies = []

[project.urls]
Homepage = "https://github.com/idlesign/uwsgiconf"
Documentation = "https://uwsgiconf.readthedocs.io/"

[project.scripts]
uwsgiconf = "uwsgiconf.cli:main"

[dependency-groups]
dev = [
    {include-group = "docs"},
    {include-group = "linters"},
    {include-group = "tests"},
    {include-group = "runtime"},
]
docs = [
    "mkdocs-material",
    "mkdocs-navsorted-plugin",
    "mkdocs-apidescribed-plugin",
]
linters = [
    "ruff==0.13.1",
]
tests = [
    "pytest",
    "pytest-djangoapp>=1.4.2",
    "freezegun",
]
runtime = [
    "django",
    "uwsgi",
]

[project.optional-dependencies]
cli = [
  "click>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/uwsgiconf/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/uwsgiconf"]

[tool.hatch.build.targets.sdist]
packages = ["src/"]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.coverage.run]
source = [
    "src/",
]
omit = [
    "src/uwsgiconf/cli.py",
    "src/uwsgiconf/uwsgi.py",
]

[tool.coverage.report]
fail_under = 97.00
exclude_also = [
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.tox]
skip_missing_interpreters = true
env_list = [
  "py310",
  "py311",
  "py312",
  "py313",
]

[tool.tox.env_run_base]
dependency_groups = ["tests"]
commands = [
  ["pytest", { replace = "posargs", default = ["tests"], extend = true }],
]
